[gd_scene load_steps=15 format=3 uid="uid://c0gk3jyfgn3tm"]

[ext_resource type="Texture2D" uid="uid://tocs3p0c4i6u" path="res://Assets/Pictures/Sky.png" id="1_4q2eq"]
[ext_resource type="Script" uid="uid://bjl5hfa3mvyub" path="res://about.gd" id="1_k56y8"]
[ext_resource type="FontFile" uid="uid://buvbp6jbbtoh5" path="res://Assets/Game_Font.ttf" id="2_pp48r"]
[ext_resource type="Texture2D" uid="uid://d2bfudew2pxcy" path="res://Assets/Pictures/Ground.png" id="4_h6umi"]
[ext_resource type="AudioStream" uid="uid://s4woexhutivi" path="res://Assets/Audio/Select.mp3" id="5_sx25x"]
[ext_resource type="Texture2D" uid="uid://bkbocm85hq0ey" path="res://Assets/Pictures/AppApex_Logo_Master.png" id="6_x5r8a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pp48r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k56y8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h6umi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sx25x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qkww8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j2lv4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xdudg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6umi"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="About" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k56y8")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(834, 468)
scale = Vector2(2.6289063, 1.609375)
texture = ExtResource("1_4q2eq")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 588.0
offset_top = 85.0
offset_right = 1329.0
offset_bottom = 270.0
theme_override_colors/font_color = Color(0.21831939, 0.2852567, 1, 1)
theme_override_fonts/font = ExtResource("2_pp48r")
theme_override_font_sizes/font_size = 200
text = "  About  "
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 324.0
offset_right = 1797.0
offset_bottom = 816.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Designer & Developer: Srijon Bhattacharya

Publisher: AppApex"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 780.0
offset_right = 316.48785
offset_bottom = 863.0
scale = Vector2(1.6399996, 1.6399996)
theme_override_colors/font_color = Color(0.25691953, 0.2555743, 1, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_pp48r")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_k56y8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h6umi")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_sx25x")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qkww8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_j2lv4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xdudg")
text = "Back"

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(905, 2102)
scale = Vector2(2.2, 2.2)
texture = ExtResource("4_h6umi")

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 1385.0
offset_top = 751.0
offset_right = 1699.0245
offset_bottom = 847.95123
scale = Vector2(1.6399996, 1.6399996)
theme_override_colors/font_color = Color(0.25691953, 0.2555743, 1, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_pp48r")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_k56y8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h6umi")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_sx25x")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qkww8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_j2lv4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xdudg")
text = "Contact"

[node name="Label3" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 67.0
offset_top = 55.0
offset_right = 491.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_h6umi")
text = "ðŸ“‹ Copied!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_sx25x")
volume_db = -4.623
pitch_scale = 0.92

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(45.999992, 28.320004)
scale = Vector2(0.17312501, 0.17312501)
texture = ExtResource("6_x5r8a")

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_top = 55.0
offset_right = 302.0
offset_bottom = 151.0
scale = Vector2(0.32000002, 0.32000002)
theme_override_colors/font_color = Color(0.48235294, 0.16470589, 0.99607843, 1)
theme_override_font_sizes/font_size = 70
text = "AppApex"

[node name="Label5" type="Label" parent="."]
z_index = -1
layout_mode = 0
offset_left = 163.0
offset_top = 332.0
offset_right = 1805.0
offset_bottom = 824.0
theme_override_colors/font_color = Color(0, 0, 0, 0.16078432)
theme_override_font_sizes/font_size = 50
text = "Designer & Developer: Srijon Bhattacharya

Publisher: AppApex"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="."]
z_index = -1
layout_mode = 0
offset_left = 600.0
offset_top = 97.0
offset_right = 1341.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(0, 0, 0, 0.11764706)
theme_override_fonts/font = ExtResource("2_pp48r")
theme_override_font_sizes/font_size = 200
text = "  About  "
horizontal_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
